# faceDetectionApp

./: README.md  Welcome
FaceRecognition/: CMakeLists.txt  camera.cpp  camera.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
OpenCV_JellyFish/: CMakeLists.txt  main.cpp
Webcam_OpenCV/: CMakeLists.txt  main.cpp
e1_FaceDetection_App/: CMakeLists.txt  camera.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
face_detection/: CMakeLists.txt  main.cpp
my_FaceRegconzition_app/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycamera.cpp  mycamera.h
quickSort/: CMakeLists.txt
zz01_my_FaceDetection_app/: CMakeLists.txt  facedetection.cpp  facedetection.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mycamera.cpp  mycamera.h
